# volt-core

./: .gitignore  Cargo.toml  README.md  chain.json  deploy_v1.0.21.ps1
.github/workflows/: build.yml
Volt_App_Final/volt.db/: snap.0000000000000623
Volt_App_Stage/: pool_key.txt
Volt_App_Stage/volt.db/: db
explorer/: .gitignore
manual_deploy/: Dockerfile  README.md  proxy.py  run.sh  volt_core
src/: api.rs  block.rs  chain.rs  db.rs  gui.rs  main.rs  node.rs  p2p.rs  script.rs  stratum.rs  transaction.rs  wallet.rs
volt.db/: db  snap.00000000000665F5
volt_core/: Cargo.toml
volt_core/src/: api.rs  chain.rs  main.rs  node.rs
volt_core_github/: README.md
volt_wallet/: Cargo.toml  build.rs
volt_wallet/src/: main.rs  rpc.rs  rpc_bk.rs
web_deploy/: cert.pem  index.html  key.pem  package-lock.json  package.json
web_deploy/api/: rpc.js
web_deploy/public/: robots.txt  sitemap.xml
web_deploy/src/: App.css  App.jsx  config.js
web_deploy/src/components/: Chart.jsx  Layout.jsx
web_deploy/src/pages/: AddressDetail.jsx  Assets.jsx  BlockDetail.jsx  Dex.jsx  Explorer.jsx  Guide.jsx  Home.jsx  Nft.jsx  Pool.jsx  Privacy.jsx  Staking.jsx  Status.jsx  Swap.jsx  Terms.jsx  TxDetail.jsx  Wallet.jsx  Whitepaper.jsx
web_deploy/src/utils/: apiConfig.js  crypto.js  wallet.js
