[package]
name = "volt_wallet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
egui_extras = { version = "0.27.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png", "ico"] }
qrcode = "0.12"
